2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Presume availability of `vfprintf'.

	* rcslex.c (fvfprintf): Move code in #if has_vfprintf
	block up; delete #else block.
	* conf.sh: Remove checks for `vfprintf', `_doprintf', `_doprnt'.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Assume `malloc' returns `void *'.

	* rcsbase.h: Do s/malloc_type/void */g.
	* rcsfnms.c: Likewise.
	* rcsutil.c: Likewise.
	* conf.sh: Remove check for `malloc' rv type.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Assume `closedir' (from <dirent.h>) returns `int'.

	* rcsclean.c [HAVE_DIRENT_H]: #include <dirent.h>.
	(get_directory): For both func decl and function definition, move
	out of #if has_dirent block and into "ifdef HAVE_DIRENT_H" block.
	Also, assume unconditionally that `closedir' returns `int'.
	(main): Use #ifdef HAVE_DIRENT_H instead of #if has_dirent.
	* conf.sh: Remove checks for <dirent.h>, `closedir' rv.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Presume availability of `memcmp', `memcpy', `memmove'.

	* rcsedit.c (movelines): Move #define to top-level out of
	"#if has_memmove" block, deleting the #else /*!has_memmove */ block.
	* rcsutil.c [!has_memcmp] (memcmp): Delete func.
	[!has_memcpy] (memcpy): Likewise.
	* conf.sh: Remove checks for `memcmp', `memcpy', `memmove'.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move check for system headers into configure.in.

	* conf.sh: Arrange to #include unconditionally <sys/types.h>,
	<sys/stat.h>, <stdlib.h>, <string.h>.  Convert checks for
	system headers from compiler-based to grep auto-sussed.h.
	Likewise for <sys/param.h>; re-#define/use HAVE_SYS_PARAM_H.
	Remove handling for <errno.h> that doesn't declare `errno'.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] To return from `main', use `return' directly.

	* ci.c (main): Use `return', not `exitmain'.
	* co.c (main): Likewise.
	* ident.c (main): Likewise.
	* merge.c (main): Likewise.